# plasmoid-pihole-unofficial

./: .gitignore  CMakeLists.txt  readme.md
plasmoid/: metadata.desktop
plasmoid/contents/code/: utils.js
plasmoid/contents/config/: main.xml
plasmoid/contents/ui/: Block.qml  CompactRepr.qml  FullRepr.qml  Holestats.qml  main.qml
plasmoid/contents/ui/config/: ConfigGeneral.qml
